A few small changes:  - Graphics windows shouldn't draw when collapsed  - The load event doesn't seem to fire when the page is using the file: protocol, so skip that for Metrics  - When processed by Rollup and used in Parchment for Inform 7 the canvasResizeObserver test failed as it ran too early  - Stop the metrics measuring from entering an infinite loop of visualviewport resize events in Parchment for Inform 7

--- a/src/glkote/web/core.css
+++ b/src/glkote/web/core.css
@@ -40,6 +40,13 @@ https://github.com/curiousdannii/asyncglk
     top: 20%;
 }
 
+/* Make the test pane render invisibly */
+#layout_test_pane {
+    position: absolute;
+    top: 0;
+    visibility: hidden;
+}
+
 /* iOS 15: When the virtual keyboard is active, the URL bar is not correctly accounted for in visualViewport.height
    https://bugs.webkit.org/show_bug.cgi?id=229876
    Should be fixed in iOS 15.1
